<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eng-Myan Dictionary</string>
    <string name="empty_string"></string>
	
	<string name="action_moreoverflow">Menu</string>
	<string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Add to Favorite</string>
    <string name="action_favorite_remove">Remove from Favorite</string>
    <string name="action_manage_favorites">Manage Favorites</string>
    <string name="action_recent">Recents</string>
    <string name="action_exit">Exit</string>
	<string name="action_sound">Sound</string>
	<string name="action_picture">Picture</string>
	<string name="action_done">Done</string>
	<string name="action_close">Close</string>
	<string name="action_edit">Edit</string>
	<string name="action_delete">Delete</string>
	<string name="action_clear">Clear</string>
	<string name="action_select_all">Select All</string>
	<string name="action_back">Back</string>
	<string name="action_forward">Forward</string>
    	
   	<string name="search_hint">Search …</string>
    <string name="settings_description">Definitions of words</string>
	
    <string name="loading_text">Loading …</string>
    
	<string name="install_text">Please Wait …</string>
	<string name="install_message">Installing …</string>
	<string name="install_complete_message">Installation completed. Enjoy it.</string>
	<string name="install_error_folder_create">Does not create data folder!</string>
	<string name="install_error_data_load">Does not load data!</string>
	<string name="install_error_message">Does not install data!</string>
	
	<string name="no_sound_message">No sound detected.</string>
	<string name="add_favorites_message">Favorite added.</string>
	<string name="remove_favorites_message">Favorite removed.</string>
	
	<string name="title_synonym">Synonym</string>
	
	<string name="favorites_title">Favorites</string>
	<string name="favorites_edit_title">Edit Favorites</string>
	<string name="favorites_delete_message">Are you sure to delete selected favorites?</string>
	
	<string name="recents_title">Recents</string>
	<string name="clear_recent_title">Clear Recents</string>
	<string name="clear_recent_message">Are you sure to clear all recents?</string>
	
	<string name="prefs_category_general">General</string>
	
	<string name="prefs_used_unicode_fix">Used Unicode Fix</string>
	<string name="prefs_used_unicode_fix_summary">Fix up with correct unicode charaters.</string>
	
	<string name="prefs_used_word_clickable">Enabled word link</string>
	<string name="prefs_used_word_clickable_summary">Show definition when click some word.</string>
	
	<string name="prefs_show_synonym">Show Synonym</string>
	<string name="prefs_show_synonym_summary">Show Synonym under definition.</string>
	
	<string name="prefs_category_about">About</string>
	
	<string name="prefs_about">About Dictionary</string>
	<string name="version_text">Version - %s</string>
	
	<string name="prefs_credit">Credit</string>
	<string name="prefs_credit_summary">Credit of dictionary</string>
	
	<string name="about_text"><Data>
      <![CDATA["
      <p><b>Eng-Myan Dictionary</b></p>
      <p>Word : 21984<br/>Images : 933</p>
      <p>Develop by <a href='http://www.facebook.com/soeminnminn'>Soe Minn Minn</a></p>
      <p>Copyright \u00A9 2014 The Android Open Source Project</p>
      "]]>
    </Data></string>

</resources>
