<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings">
    
    <PreferenceCategory 
        android:title="@string/prefs_category_general">
        
        <CheckBoxPreference  
			android:key="prefs_used_unicode_fix"  
			android:title="@string/prefs_used_unicode_fix"  
			android:summary="@string/prefs_used_unicode_fix_summary" 
			android:defaultValue="false" />
        
        <CheckBoxPreference  
			android:key="prefs_used_word_clickable"  
			android:title="@string/prefs_used_word_clickable"  
			android:summary="@string/prefs_used_word_clickable_summary" 
			android:defaultValue="true" />
        
        <CheckBoxPreference  
			android:key="prefs_show_synonym"  
			android:title="@string/prefs_show_synonym"  
			android:summary="@string/prefs_show_synonym_summary" 
			android:defaultValue="true" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/prefs_category_about">
        
        <Preference 
            android:key="prefs_credit"
            android:summary="@string/prefs_credit_summary"
            android:title="@string/prefs_credit" />
        
        <com.s16.app.AboutPreference 
            android:key="prefs_about"
            android:summary=""
            android:title="@string/prefs_about" />
        
    </PreferenceCategory>
    
</PreferenceScreen>
