<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/prefs_group_general">
        <CheckBoxPreference  
			android:key="prefs_used_unicode_fix"  
			android:title="@string/prefs_used_unicode_fix"  
			android:summary="@string/prefs_used_unicode_fix_summary" 
			android:defaultValue="true" />
        
        <Preference 
            android:key="prefs_credit"
            android:summary="@string/prefs_credit_summary"
            android:title="@string/prefs_credit" />
        
        <Preference 
            android:key="prefs_about"
            android:summary=""
            android:title="@string/prefs_about" />
        
    </PreferenceCategory>
</PreferenceScreen>