<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Settings -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom|withText" />
    
    <!-- Favorites -->
    <item android:id="@+id/action_manage_favorites"
          android:icon="@drawable/ic_action_star"
          android:title="@string/action_manage_favorites" 
          android:showAsAction="ifRoom|withText"/>
    
    <!-- Recent -->
    <item android:id="@+id/action_recent"
          android:icon="@drawable/ic_action_recent"
          android:title="@string/action_recent" 
          android:showAsAction="ifRoom|withText"/>
    
    <!-- About -->
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_action_about"
          android:title="@string/action_about" 
          android:showAsAction="ifRoom|withText"/>
    
    <!-- Exit -->
    <item android:id="@+id/action_exit"
          android:icon="@drawable/ic_action_cancel"
          android:title="@string/action_exit"
          android:showAsAction="ifRoom|withText" />
</menu>