<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.s16.android.MainActivity" >
    
    <!-- Favorites -->
    <item 
        android:id="@+id/action_manage_favorites"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite_border_white_36dp"
        android:title="@string/action_manage_favorites"
        android:showAsAction="never"/>
    
    <!-- Recent -->
    <item 
        android:id="@+id/action_recent"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_white_36dp"
        android:title="@string/action_recent"
        android:showAsAction="never"/>

    <!-- Settings -->
    <item 
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white_36dp"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    
    <!-- About -->
    <item 
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_outline_white_36dp"
        android:title="@string/action_about"
        android:showAsAction="never"/>
    
    <!-- Exit -->
    <item 
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:icon="@drawable/ic_exit_to_app_white_36dp"
        android:title="@string/action_exit"
        android:showAsAction="never" />

</menu>