<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_star"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_favorite"/>
    
    <item
        android:id="@+id/action_sound"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_volume_on"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_sound"/>
    
    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_picture"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_picture"/>
    
	<item 
	    android:id="@+id/action_moreoverflow"
	    android:orderInCategory="100"
        android:icon="@drawable/ic_action_moreoverflow"
        android:title="@string/action_moreoverflow" 
        android:showAsAction="ifRoom|withText" />
	<!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	-->
</menu>
