<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameFavoritesEdit"
    style="@style/DoneBar"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <ImageButton
        android:id="@+id/doneButton"
        style="@style/DoneBar.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="4dp"
        android:contentDescription="@string/action_done"
        android:src="@drawable/ic_action_done" />
    
    <TextView
        style="@style/DoneBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="58dp"
        android:text="@string/favorites_edit_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/deleteButton"
        style="@style/DoneBar.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="52dp"
        android:contentDescription="@string/action_delete"
        android:src="@drawable/ic_action_delete" />
    
    <ImageButton
        android:id="@+id/selectAllButton"
        style="@style/DoneBar.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/action_select_all"
        android:src="@drawable/ic_action_select_all" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="top|left"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="50dp"
        android:background="@color/bright_foreground_disabled_holo_light" />
    
</FrameLayout>
