<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameRecentTitle"
    style="@style/DoneBar"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >
    
   <TextView
       style="@style/DoneBar.Title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left|center_vertical"
       android:layout_marginLeft="@dimen/popup_title_margin_left"
       android:text="@string/recents_title"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <ImageButton
       android:id="@+id/closeButton"
       style="@style/DoneBar.ActionButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left|center_vertical"
       android:contentDescription="@string/action_close"
       android:src="@drawable/ic_action_cancel_light" />
   
   <include
       layout="@layout/layout_divider"
       android:layout_width="1dp"
       android:layout_height="match_parent"
       android:layout_gravity="top|left"
       android:layout_marginTop="2dp"
       android:layout_marginBottom="1dp"
       android:layout_marginLeft="@dimen/popup_divider_margin_left" />
   
   <ImageButton
        android:id="@+id/clearButton"
        style="@style/DoneBar.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/action_clear"
        android:src="@drawable/ic_action_delete_light" />
    
</FrameLayout>
