<?xml version="1.0" encoding="utf-8"?>
<com.s16.engmyan.widget.DefinitionView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDefinitionView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:isScrollContainer="true" >
    
    <ScrollView 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="@drawable/white" >
        
        <RelativeLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/textViewDetails" 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:paddingLeft="@dimen/content_horizontal_margin"
		    	android:paddingStart="@dimen/content_horizontal_margin"
		    	android:paddingRight="@dimen/content_horizontal_margin"
		    	android:paddingEnd="@dimen/content_horizontal_margin"
		    	android:paddingTop="@dimen/content_vertical_margin"
		    	android:textAppearance="?android:attr/textAppearanceSmall"
		    	android:text="@string/app_name" />
		    
		    <RelativeLayout
		        android:id="@+id/layoutSynonymView"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@+id/textViewDetails" >
		        
			    <View 
			        android:id="@+id/dividerDetails"
			        android:layout_width="match_parent"
			        android:layout_height="1dip"
			        android:background="@color/grey_50" />
			    
			    <TextView 
			        android:id="@+id/textViewSynonymTitle" 
			        android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_below="@+id/dividerDetails"
			    	android:layout_marginBottom="@dimen/content_vertical_margin"
			    	android:textAppearance="?android:attr/textAppearanceMedium"
			    	android:paddingLeft="@dimen/content_horizontal_margin"
			    	android:paddingStart="@dimen/content_horizontal_margin"
			    	android:paddingRight="@dimen/content_horizontal_margin"
			    	android:paddingEnd="@dimen/content_horizontal_margin"
			    	android:paddingTop="@dimen/content_vertical_margin"
			    	android:textColor="@color/title_synonym"
			    	android:textStyle="bold"
			    	android:text="@string/title_synonym" />
			    
			    <TextView 
			        android:id="@+id/textViewSynonym" 
			        android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_below="@+id/textViewSynonymTitle"
			    	android:textAppearance="?android:attr/textAppearanceSmall"
			    	android:paddingBottom="@dimen/content_vertical_margin"
			    	android:paddingLeft="@dimen/content_horizontal_margin"
			    	android:paddingStart="@dimen/content_horizontal_margin"
			    	android:paddingRight="@dimen/content_horizontal_margin"
			    	android:paddingEnd="@dimen/content_horizontal_margin"
			    	android:text="@string/title_synonym" />
		    
		    </RelativeLayout>
            
        </RelativeLayout>
        
    </ScrollView>
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/layoutLoading"
        android:background="@drawable/dialog_full_holo_light"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingStart="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingEnd="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin"
        android:paddingBottom="@dimen/dialog_vertical_margin" >
    
        <ProgressBar
	        android:id="@+id/progressLoading"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:indeterminateOnly="true" />
        
        <TextView 
            android:id="@+id/textLoading"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/dialog_divider_height"
	        android:layout_below="@+id/progressLoading"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:gravity="center"
	        android:text="@string/loading_text" />
        
    </RelativeLayout>
    
</com.s16.engmyan.widget.DefinitionView>
